--- a/app/globals.css
+++ b/app/globals.css
@@ -17,9 +17,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* Optional: Background color for entire site */
+/* Background color for entire site */
 body {
-  background-color: #f7f5ef; /* your cream tone */
+  background-color: #f7f5ef; /* cream */
 }
 
 /* -------------------------------------------
